# openapi.yaml
@@ -259,6 +259,24 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/DecodeRGBInvoiceResponse'
+  /deletetransfers:
+    post:
+      tags:
+        - RGB
+      summary: Delete RGB transfers
+      description: Delete eligible (failed) RGB transfers, freeing their allocated UTXOs
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/DeleteTransfersRequest'
+      responses:
+        '200':
+          description: Successful operation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/DeleteTransfersResponse'
   /disconnectpeer:
     post:
       tags:
@@ -820,6 +838,25 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/RgbInvoiceResponse'
+  /rgbinvoicestatus:
+    post:
+      tags:
+        - RGB
+      summary: Get RGB invoice status
+      description: Get the current status and details of an RGB invoice by its batch
+        transfer index
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/RgbInvoiceStatusRequest'
+      responses:
+        '200':
+          description: Successful operation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Transfer'
   /sendasset:
     post:
       tags:
@@ -1435,6 +1472,22 @@ components:
           items:
             type: string
             example: rpcs://proxy.iriswallet.com/0.2/json-rpc
+    DeleteTransfersRequest:
+      type: object
+      properties:
+        batch_transfer_idx:
+          type: integer
+          nullable: true
+          example: 1
+        no_asset_only:
+          type: boolean
+          example: false
+    DeleteTransfersResponse:
+      type: object
+      properties:
+        transfers_changed:
+          type: boolean
+          example: true
     DisconnectPeerRequest:
       type: object
       properties:
@@ -2072,6 +2125,19 @@ components:
         batch_transfer_idx:
           type: integer
           example: 1
+    RgbInvoiceStatusRequest:
+      type: object
+      properties:
+        batch_transfer_idx:
+          type: integer
+          example: 1
+        asset_id:
+          type: string
+          nullable: true
+          example: rgb:CJkb4YZw-jRiz2sk-~PARPio-wtVYI1c-XAEYCqO-wTfvRZ8
+        skip_sync:
+          type: boolean
+          example: false
     SendAssetRequest:
       type: object
       properties:
@@ -2308,6 +2374,9 @@ components:
         idx:
           type: integer
           example: 1
+        batch_transfer_idx:
+          type: integer
+          example: 1
         created_at:
           type: integer
           example: 1691160765
@@ -2343,6 +2412,10 @@ components:
           type: array
           items:
             $ref: '#/components/schemas/TransferTransportEndpoint'
+        invoice_string:
+          type: string
+          nullable: true
+          example: rgb:2dkSTbr/RGB20/100+utxob:zlVS28Rb-!lFsT7wK-7MrmYBp-YgnT!QB-ETskDWW-!dT4Uq0
     TransferKind:
       type: string
       example: ReceiveBlind
