# src/main.rs
@@ -44,13 +44,14 @@ use crate::ldk::stop_ldk;
 use crate::routes::{
     address, asset_balance, asset_metadata, backup, btc_balance, change_password,
     check_indexer_url, check_proxy_endpoint, close_channel, connect_peer, create_utxos,
-    decode_ln_invoice, decode_rgb_invoice, disconnect_peer, estimate_fee, fail_transfers,
-    get_asset_media, get_channel_id, get_payment, get_swap, init, invoice_status, issue_asset_cfa,
-    issue_asset_nia, issue_asset_uda, keysend, list_assets, list_channels, list_payments,
-    list_peers, list_swaps, list_transactions, list_transfers, list_unspents, ln_invoice, lock,
-    maker_execute, maker_init, network_info, node_info, open_channel, post_asset_media,
-    refresh_transfers, restore, revoke_token, rgb_invoice, send_asset, send_btc,
-    send_onion_message, send_payment, shutdown, sign_message, sync, taker, unlock,
+    decode_ln_invoice, decode_rgb_invoice, delete_transfers, disconnect_peer, estimate_fee,
+    fail_transfers, get_asset_media, get_channel_id, get_payment, get_swap, init, invoice_status,
+    issue_asset_cfa, issue_asset_nia, issue_asset_uda, keysend, list_assets, list_channels,
+    list_payments, list_peers, list_swaps, list_transactions, list_transfers, list_unspents,
+    ln_invoice, lock, maker_execute, maker_init, network_info, node_info, open_channel,
+    post_asset_media, refresh_transfers, restore, revoke_token, rgb_invoice, rgb_invoice_status,
+    send_asset, send_btc, send_onion_message, send_payment, shutdown, sign_message, sync, taker,
+    unlock,
 };
 use crate::utils::{start_daemon, AppState, LOGS_DIR};
 
@@ -117,6 +118,7 @@ pub(crate) async fn app(args: UserArgs) -> Result<(Router, Arc<AppState>), AppEr
         .route("/createutxos", post(create_utxos))
         .route("/decodelninvoice", post(decode_ln_invoice))
         .route("/decodergbinvoice", post(decode_rgb_invoice))
+        .route("/deletetransfers", post(delete_transfers))
         .route("/disconnectpeer", post(disconnect_peer))
         .route("/estimatefee", post(estimate_fee))
         .route("/failtransfers", post(fail_transfers))
@@ -149,6 +151,7 @@ pub(crate) async fn app(args: UserArgs) -> Result<(Router, Arc<AppState>), AppEr
         .route("/restore", post(restore))
         .route("/revoketoken", post(revoke_token))
         .route("/rgbinvoice", post(rgb_invoice))
+        .route("/rgbinvoicestatus", post(rgb_invoice_status))
         .route("/sendasset", post(send_asset))
         .route("/sendbtc", post(send_btc))
         .route("/sendonionmessage", post(send_onion_message))
